// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FavoriteIconComponent /> should match snapshot - favorite (false) 1`] = `
<Icon
  onClick={[Function]}
  type="book"
/>
`;

exports[`<FavoriteIconComponent /> should match snapshot - favorite (true) 1`] = `
<Icon
  onClick={[Function]}
  theme="filled"
  type="book"
/>
`;
